[gd_scene load_steps=10 format=3 uid="uid://dn707pc3qgodm"]

[ext_resource type="FontFile" uid="uid://dxg0puyk07c1q" path="res://Fonts/Avenixel-Regular.ttf" id="1_12f34"]
[ext_resource type="Script" uid="uid://4p3uon117o2r" path="res://Scenes/BattleScene.gd" id="1_hip74"]
[ext_resource type="SpriteFrames" uid="uid://bwib4kufbt3ku" path="res://Player/PlayerFrames.tres" id="2_b2eky"]
[ext_resource type="PackedScene" uid="uid://lw3vd2kf4bdo" path="res://UI/ParryQTE.tscn" id="4_ahap6"]
[ext_resource type="PackedScene" uid="uid://nvft4h7nad3u" path="res://UI/PowerupQte.tscn" id="5_hb1yk"]

[sub_resource type="Gradient" id="Gradient_b2eky"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ahap6"]
gradient = SubResource("Gradient_b2eky")
width = 40
height = 40
fill = 1

[sub_resource type="Gradient" id="Gradient_hb1yk"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(4.5242905e-06, 0.81675005, 0.7070691, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u810s"]
gradient = SubResource("Gradient_hb1yk")
width = 40
height = 40

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hip74")
metadata/_edit_horizontal_guides_ = [276.0]

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.73300546, 0.7330054, 0.7330054, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="TopBar" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 64.0
offset_top = 16.0
offset_right = -64.30005
offset_bottom = 42.0
grow_horizontal = 2

[node name="PlayerInfo" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_12f34")
theme_override_font_sizes/font_size = 23
text = "Player HP: 100"

[node name="VSeparator" type="VSeparator" parent="TopBar"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyInfo" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_12f34")
theme_override_font_sizes/font_size = 23
text = "Enemy HP: 100"

[node name="BattleArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -144.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerAnim" type="AnimatedSprite2D" parent="BattleArea"]
position = Vector2(200, 42)
scale = Vector2(4.5, 4.5)
sprite_frames = ExtResource("2_b2eky")
animation = &"idle"
autoplay = "idle"

[node name="EnemyAnim" type="AnimatedSprite2D" parent="BattleArea"]
position = Vector2(974, 42)
animation = &""

[node name="TimerUI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -305.0
offset_right = -49.68994
offset_bottom = -251.0
grow_horizontal = 2
grow_vertical = 0

[node name="TimerLabel" type="Label" parent="TimerUI"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_12f34")
theme_override_font_sizes/font_size = 23
text = "10s"
horizontal_alignment = 1

[node name="TimerBar" type="ProgressBar" parent="TimerUI"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="ActionPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -250.0
offset_right = -50.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="QuestionBox" type="PanelContainer" parent="ActionPanel"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="QuestionLabel" type="Label" parent="ActionPanel/QuestionBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_12f34")
theme_override_font_sizes/font_size = 23
text = "Pertanyaan akan muncul di sini..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonsGrid" type="GridContainer" parent="ActionPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Button1" type="Button" parent="ActionPanel/ButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_12f34")
theme_override_font_sizes/font_size = 23
text = "Jawaban 1"

[node name="Button2" type="Button" parent="ActionPanel/ButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_12f34")
theme_override_font_sizes/font_size = 23
text = "Jawaban 2"

[node name="Button3" type="Button" parent="ActionPanel/ButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_12f34")
theme_override_font_sizes/font_size = 23
text = "Jawaban 3"

[node name="Button4" type="Button" parent="ActionPanel/ButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_12f34")
theme_override_font_sizes/font_size = 23
text = "Jawaban 4"

[node name="UltCircle" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 318.0
offset_right = 93.0
offset_bottom = 358.0
fill_mode = 4
texture_under = SubResource("GradientTexture2D_ahap6")
texture_progress = SubResource("GradientTexture2D_u810s")

[node name="UltButton" type="Button" parent="UltCircle"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
flat = true

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 54.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("1_12f34")
text = "exit"

[node name="ParryQTE" parent="." instance=ExtResource("4_ahap6")]
z_index = 5
layout_mode = 1
offset_left = 440.0
offset_top = 199.0
offset_right = -662.0
offset_bottom = -399.0
pivot_offset = Vector2(25, 25)

[node name="PowerupQTE" parent="." instance=ExtResource("5_hb1yk")]
z_index = 5
layout_mode = 1
offset_left = 518.0
offset_top = 199.0
offset_right = -581.0
offset_bottom = -400.0
